tests/macros/editor/page_size.rs
fn main() {
    discourse::questions![Editor { page_size: todo!() }];
}
